--- a/src/index.hbs
+++ b/src/index.hbs
@@ -5,6 +5,14 @@
 		<title>{{ htmlWebpackPlugin.options.title }}</title>
 	</head>
 	<body>
+	
+	<!-- A little help for the Netlify post-processing bots -->
+	<form name="iKcontactForm" netlify netlify-honeypot="bot-field" hidden>
+		<input type="text" name="NAME" />
+		<input type="email" name="EMAIL" />
+		<textarea name="MESSAGE"></textarea>
+	</form>
+
 		<div id='root'></div>
 	</body>
 </html>
