inserted action="/" to the static html form. maybe it will work now

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -7,7 +7,7 @@
 	<body>
 	
 	<!-- A little help for the Netlify post-processing bots -->
-	<form name="iKcontactForm" netlify netlify-honeypot="bot-field" hidden>
+	<form name="iKcontactForm" netlify netlify-honeypot="bot-field" hidden action="/">
 		<input type="text" name="NAME" />
 		<input type="email" name="EMAIL" />
 		<textarea name="MESSAGE"></textarea>
